src/style.css
@font-face {
  font-family: 'JeanLuc-bold';
  src: url('./fonts/jeanlucweb-bold.woff') format('woff'),
    url('./fonts/jeanlucweb-bold.eot') format('eot'),
    url('./fonts/jeanlucweb-bold.svg') format('svg');
  font-style: normal;
}

@font-face {
  font-family: 'JeanLuc-thin';
  src: url('./fonts/jeanlucweb-thin.woff') format('woff'),
    url('./fonts/jeanlucweb-thin.eot') format('eot'),
    url('./fonts/jeanlucweb-thin.svg') format('svg');
  font-style: normal;
}
/* "THE JEAN-LUC TYPEFACE WAS DESIGNED AND MADE BY ATELIER CARVALHO BERNAU ON THE OCCASION OF THE 80TH BIRTHDAY OF JEAN-LUC GODARD. IT IS AVAILABLE FREE OF CHARGE FROM HTTP://WWW.CARVALHO-BERNAU.COM/JLG/
JEAN-LUC TYPEFACE COPYRIGHT (C) 2010 ATELIER CARVALHO BERNAU" */

body,
html {
  height: 100%;
  margin: 0;
}

div.content {
  height: 100%;
  width: 100%;
}

.bg-image {
  background-image: url('./images/cafe-image.jpg');
  filter: grayscale(20%) contrast(110%);
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

nav,
footer {
  position: fixed;
  left: 0;
  width: 100%;
  color: white;
}

#nav-bar {
  opacity: 70%;
  height: 12%;
  background-color: black;
  top: 0;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.tab-item {
  font-family: 'JeanLuc-bold';
  color: white;
  text-decoration: none;
  text-align: center;
  font-size: 300%;
}

.tab-item:hover {
  cursor: pointer;
  animation: fade-in-color 0.7s;
  animation-fill-mode: forwards;
}

.tab-item--selected {
  color: #53b6b3;
  /* animation: fade-in 0.5s; */
}

#item-logo {
  background-image: url(./images/logo-white.svg);
  max-width: 16%;
  width: 16%;
  height: 83%;
  background-repeat: no-repeat;
  background-position: center;
  animation: fade-in 0.5s;
}

#item-logo:hover {
  animation: fade-in-bg-color 0.7s;
  animation-fill-mode: forwards;
}

.hidden {
  display: none;
}

.tab-content {
  display: none;
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 2;
}

.tab-content--selected {
  display: block;
  animation: fade-in 0.5s;
}

#logo {
  background-image: url(./images/logo-white.svg);
  width: 40%;
  height: 24%;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 90%;
}

.board-content {
  background-color: #a09e9e;
  width: 80%;
  height: 73%;
  opacity: 96%;
  top: 52%;
  border: 2px solid black;
  border-radius: 30px;
  text-align: center;
}

#menu {
  background-color: #53b6b3;
}

#menu-1, #menu-2 {
  height: 95%;
  width: 95%;
  margin-top: 1.5%;
}

.menu-arrow {
  height: 15%;
  width: 5%;
  opacity: 80%;
  position: absolute;
  top: 50%;
  transform: translate(0%,-50%);
  font-size: 2em;
}

.menu-arrow:hover {
  filter: invert(100%);
  cursor: pointer;
}

#left-arrow {
  left: 0%;
}

#right-arrow {
  right: 0%;
}

footer {
  opacity: 90%;
  bottom: 0;
  height: 5%;
  background-color: black;
  font-size: 1.2em;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1%;
}

.footer-content {
  font-family: sans-serif;
}

#github-logo {
  background-image: url('./images/GitHub-Mark-32px.png');
  filter: invert(100%);
  min-width: 4%;
  height: 68%;
  background-repeat: no-repeat;
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 96%;
  }
}

@keyframes fade-in-bg-color {
  0% {
    background-color: none;
  }
  100% {
    background-color: #53b6b3;
  }
}

@keyframes fade-in-color {
  0% {
    color: none;
  }
  100% {
    color: #53b6b3;
  }
}

